index.css
@charset "utf-8";

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Source Sans Pro', Arial, sans-serif;
}

html, body {
  height: 100%;
  width: 100%;
  transition: background 3s;
}

body {
  background: black;
}

#mobile {
  display: none;
}

#center-container {
  height: 330px;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  opacity: 0;
  transition: opacity 3s;
}

.options-container {
  /*background: rgba(0,0,0,0.3);*/
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  white-space: nowrap;
  display: block;
}

h1 {
  color: white;
  font-weight: 200;
  font-size: 90px;
  text-align: center;
  margin-top: 0;
}

h3 {
  color: white;
  font-weight: 100;
  margin: 10px 0;
  font-size: 32px;
}

button {
  color: white;
  font-size: 32px;
  background: #099bFF;
  height: 50px;
  width: 70px;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  border: none;
  border-radius: 5px;
  font-weight: 200;
  outline: 0;
}

button:active {
  background: #005c99;
}

button:hover {
  cursor: pointer;
}

select {
  border: none;
  border-radius: 5px;
  background: #099bFF;
  font-size: 32px;
  color: white;
  font-weight: 200;
  outline: 0;
}

select:hover {
  cursor: pointer;
}

.message {
  width: 543px;
  height: 30px;
  border: none;
  border-radius: 5px;
  position: relative;
  bottom: 5px;
}

@media only screen and (max-width: 866px) {
  h1 {
    font-size: 80px;
    font-weight: 200;
  }

  h3 {
    font-size: 28px;
    font-weight: 100;
  }

  select {
    font-size: 28px;
    font-weight: 200;
  }

  .message {
    width: 478px;
  }

  button {
    font-size: 28px;
    font-weight: 200;
    width: auto;
    height: auto;
    padding: 5px 14px;
  }

  #center-container {
    height: 302px;
  }
}

@media only screen and (max-width: 754px) {
  h1 {
    font-size: 60px;
    font-weight: 200;
  }

  h3 {
    font-size: 20px;
    font-weight: 100;
  }

  select {
    font-size: 20px;
    font-weight: 200;
  }

  .message {
    width: 350px;
  }

  button {
    font-size: 20px;
    font-weight: 200;
    width: auto;
    height: auto;
    padding: 5px 10px;
  }

  #center-container {
    height: 235px;
  }
}

@media only screen and (max-width: 570px) {
  #center-container {
    display: none;
  }

  #mobile {
    display: block;
    text-align: center;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
  }

  h4 {
    color: white;
    font-size: 20px;
    font-weight: 200;
  }

  h5 {
    color: white;
    font-size: 15px;
    font-weight: 100;
  }

}

